--- a/codefresh/applicationset/octopub-development-kustomize.yaml
+++ b/codefresh/applicationset/octopub-development-kustomize.yaml
@@ -1,22 +1,33 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
   name: octopub-development
   annotations:
     codefresh.io/product: octopub
 spec:
-  project: default
-  source:
-    repoURL: https://github.com/twerthi/octopub.git
-    targetRevision: HEAD
-    path: codefresh/kustomize/envs/Development
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: development
-  syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - Validate=false
-    - CreateNamespace=true
+  generators:
+  - list:
+       elements:
+       - cluster: in-cluster
+         url: https://kubernetes.default.svc 
+       - cluster: k3s
+         url: https://k3s1:6443
+  template:
+    metadata:
+      name: '{{cluster}}-octopub-development'
+    spec:
+      project: default
+      source:
+        repoURL: https://github.com/twerthi/octopub.git
+        targetRevision: HEAD
+        path: codefresh/kustomize/envs/Development
+      destination:
+        server: '{{url}}'
+        namespace: development
+      syncPolicy:
+        automated: 
+          prune: true
+          selfHeal: true
+        syncOptions:
+        - Validate=false
+        - CreateNamespace=true
