--- a/codefresh/helm/octopub-audits-mysql/test/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/test/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: twerthi/octopub-audit-microservice-mysql
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 2025.04.15.42
+  tag: 2025.08.27.46
 
 database:
   hostname: 192.168.1.64
@@ -41,8 +41,7 @@ podAnnotations: {}
 
 podSecurityContext: {} # fsGroup: 2000
 
-securityContext:
-  {}
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -62,8 +61,7 @@ service:
 ingress:
   enabled: true
   #  className: ""
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -76,8 +74,7 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources:
-  {}
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
