--- a/manifests/environments/test/vault-external-secret.yaml
+++ b/manifests/environments/test/vault-external-secret.yaml
@@ -17,7 +17,7 @@ spec:
   data: # This is an array of secret key-value pairs that the \
   #ExternalSecret will retrieve from the Vault secret store and store \
   #in the Kubernetes secret.
-    - secretKey: MYSQL_USERNAME #This specifies the key name for the \
+    - secretKey: database-user #This specifies the key name for the \
     #secret value in the Kubernetes secret.
       remoteRef: #This is an object that contains the reference to the \
       #secret in the Vault secret store.
@@ -25,7 +25,7 @@ spec:
         #in the Vault secret store
         property: SA_USERNAME #This specifies the name of the \
         #secret property to retrieve from the Vault secret.
- #   - secretKey: MYSQL_PASSWORD
- #     remoteRef:
- #       key: "mysqlserver"
- #       property: SA_PASSWORD
+    - secretKey: database-password
+      remoteRef:
+        key: "mysqlserver"
+        property: SA_PASSWORD
