--- a/manifests/input-templates/octopub-frontend.yaml
+++ b/manifests/input-templates/octopub-frontend.yaml
@@ -17,4 +17,4 @@ spec:
           image: octopussamples/octopub-frontend
           ports:
             - containerPort: 8080
-              name: #{TestVar}
+              name: frontend
