--- a/manifests/input-templates/octopub-products-mysql.yaml
+++ b/manifests/input-templates/octopub-products-mysql.yaml
@@ -25,17 +25,17 @@ spec:
                   name: database-credentials
                   key: database-password
             - name: DATABASE_HOSTNAME
-              value: "192.168.1.64"
+              value: "#{MySQL.Server.Name}"
             - name: DATABASE_PORT
-              value: "30000"
+              value: "#{MySQL.Server.Port}"
             - name: DATABASE_NAME
-              value: "octopub_Development"
+              value: "octopub_#{Octopus.Environment.Name}"
             - name: DATABASE_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: database-credentials
                   key: database-user
             - name: MIGRATE_AT_START
-              value: "false"
+              value: "#{Project.EnvironmentVariable.MigrateAtStart}"
             - name: COGNITO_DISABLE_AUTH
-              value: "true"
+              value: "#{Project.EnvironmentVariables.CognitoDisableAuth}"
