--- a/.github/workflows/octopub-frontend.yaml
+++ b/.github/workflows/octopub-frontend.yaml
@@ -10,7 +10,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
         with:
