--- a/.github/workflows/octopub-audits.yaml
+++ b/.github/workflows/octopub-audits.yaml
@@ -28,6 +28,7 @@ jobs:
           service_directory: audit-microservice
           github_codefresh_token: ${{ secrets.CF_GITHUB_TOKEN }}
           codefresh_token: ${{ secrets.USER_TOKEN }}
-          octopus_server_url: ${{ secrets.OCTOPUS_SERVER_URL }}
-          octopus_api_key: ${{ secrets.OCTOPUS_API_KEY }}
-          octopus_space: ${{ secrets.OCTOPUS_SPACE }}
+          octopus_server_url: ${{ secrets.LOCAL_OCTOPUS_SERVER_URL }}
+          octopus_api_key: ${{ secrets.LOCAL_OCTOPUS_API_KEY }}
+          #octopus_space: ${{ secrets.OCTOPUS_SPACE }}
+          octopus_space: "Default"
