--- a/.github/workflows/octopub-frontend.yaml
+++ b/.github/workflows/octopub-frontend.yaml
@@ -25,6 +25,6 @@ jobs:
           dockerhub_password: ${{ secrets.DOCKER_PASSWORD }}
           github_codefresh_token: ${{ secrets.CF_GITHUB_TOKEN }}
           codefresh_token: ${{ secrets.USER_TOKEN }}
-          octopus_server_url: ${{ secrets.OCTOPUS_SERVER_URL }}
-          octopus_api_key: ${{ secrets.OCTOPUS_API_KEY }}
-          octopus_space: ${{ secrets.OCTOPUS_SPACE }}          
+          octopus_server_url: ${{ secrets.LOCAL_OCTOPUS_SERVER_URL }}
+          octopus_api_key: ${{ secrets.LOCAL_OCTOPUS_API_KEY }}
+          octopus_space: "Default"          
