--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -216,7 +216,7 @@ runs:
       with:
         packages: |
           twerthi/octopub-${{ inputs.service_directory }}-mysql
-        version: ${{ steps.determine_version.outputs.semVer }}
+        version: ${{ env.PACKAGE_VERSION }}
         server: ${{ inputs.octopus_server_url }}
         api_Key: ${{ inputs.octopus_api_key }}
         space: ${{ inputs.octopus_space }}
