--- a/.github/workflows/ephemeral-environments.yaml
+++ b/.github/workflows/ephemeral-environments.yaml
@@ -15,15 +15,15 @@ jobs:
     #runs-on: ubuntu-latest
     runs-on: self-hosted
     steps:
-      - name: Create Ephemeral Environment
-        id: create_ephemeral_environment
-        uses: OctopusDeploy/create-ephemeral-environment@v1.0.0
-        with:
-          server: ${{ secrets.LOCAL_OCTOPUS_SERVER_URL }}
-          api_key: ${{ secrets.LOCAL_OCTOPUS_API_KEY }}
-          name: 'ephemeral-environment-pr-${{ github.event.pull_request.number }}'
-          project: 'Ephemeral Environments'
-          space: 'Default'
+      # - name: Create Ephemeral Environment
+      #   id: create_ephemeral_environment
+      #   uses: OctopusDeploy/create-ephemeral-environment@v1.0.0
+      #   with:
+      #     server: ${{ secrets.LOCAL_OCTOPUS_SERVER_URL }}
+      #     api_key: ${{ secrets.LOCAL_OCTOPUS_API_KEY }}
+      #     name: 'ephemeral-environment-pr-${{ github.event.pull_request.number }}'
+      #     project: 'Ephemeral Environments'
+      #     space: 'Default'
 
       - name: Create a release in Octopus Deploy 🐙
         id: create_a_release_in_octopus_deploy  
